--- a/coaches/templates/coaches/index.html
+++ b/coaches/templates/coaches/index.html
@@ -44,7 +44,8 @@
 						{% for user_tag in tags.new %}
 							<tr>
 								<td>
-									<a href="{% url 'coaches:details' user_tag.id %}" style="color:black"> {{user_tag.name}}:</a><br>
+									<!--REAL <a href="{% url 'coaches:details' user_tag.id %}" style="color:black"> {{user_tag.name}}:</a><br> -->
+									<a href="{% url 'coaches:details' user_tag.id %}" style="color:black"> {{user_tag.id}}:</a><br>
 									
 										<p style="color: {{user_tag.color}}">
 											{% for tag in user_tag.tags %}
@@ -64,7 +65,8 @@
 						{% for user_tag in tags.recent %}
 							<tr>
 								<td>
-									<a href="{% url 'coaches:details' user_tag.id %}" style="color:black"> {{user_tag.name}}:</a><br>
+									<!-- REAL <a href="{% url 'coaches:details' user_tag.id %}" style="color:black"> {{user_tag.name}}:</a><br> -->
+									<a href="{% url 'coaches:details' user_tag.id %}" style="color:black"> {{user_tag.id}}:</a><br>
 									
 										<p style="color: {{user_tag.color}}">
 											{% for tag in user_tag.tags %}
