--- a/athletes/templates/athletes/dashboard.html
+++ b/athletes/templates/athletes/dashboard.html
@@ -229,7 +229,7 @@
 				<div class="chart-title">
 					Distance (External Workload)
 				</div>
-					<div class="chart-stage" style="padding-top: 20px; padding-right: 50px;">
+					<div class="chart-stage dashboard">
 						<div id="distance">
 							<svg class="no_lines" style="overflow: visible; height: 250px;""></svg>
 						</div>
@@ -242,7 +242,7 @@
 				<div class="chart-title">
 					sRPE (Internal Workload)
 				</div>
-					<div class="chart-stage" style="padding-top: 20px; padding-right: 50px;">
+					<div class="chart-stage dashboard">
 						<div id="sRPE">
 							<svg class="no_lines" style="overflow: visible; height: 250px;"></svg>
 						</div>
@@ -259,7 +259,7 @@
 				<div class="chart-title">
 					User Tags
 				</div>
-					<div class="chart-stage" style="padding-top: 10px; padding-right: 50px;">
+					<div class="chart-stage dashboard">
 						<div id="user_tags">
 							<svg class="no_lines" style="overflow: visible;"></svg>
 						</div>
@@ -272,7 +272,7 @@
 				<div class="chart-title">
 					Injury and Performance Tags
 				</div>
-					<div class="chart-stage" style="padding-top: 10px; padding-right: 50px;">
+					<div class="chart-stage dashboard">
 						<div id="performance_injury">
 							<svg class="no_lines" style="overflow: visible;"></svg>
 						</div>
