--- a/athletes/templates/athletes/details.html
+++ b/athletes/templates/athletes/details.html
@@ -221,7 +221,7 @@
                         <div class="chart-title">
                             Average Speed Histogram
                         </div>
-                        <div class="chart-stage">
+                        <div class="chart-stage details-hist">
                             <div id="speed-histogram">
                                 <svg></svg>
                             </div>
@@ -236,7 +236,7 @@
                             Speed Over Distance
                         </div>
 
-                        <div class="chart-stage">
+                        <div class="chart-stage details-line">
                             <div id="speed-graph">
                                 <svg></svg>
                             </div>
@@ -255,7 +255,7 @@
                         <div class="chart-title">
                             Average Heart Rate Histogram
                         </div>
-                        <div class="chart-stage">
+                        <div class="chart-stage details-hist">
                             <div id="hr-histogram">
                                 <svg></svg>
                             </div>
@@ -270,7 +270,7 @@
                             Heart Rate Over Distance
                         </div>
 
-                        <div class="chart-stage">
+                        <div class="chart-stage details-line">
                             <div id="heartrate-graph">
                                 <svg></svg>
                             </div>
@@ -289,7 +289,7 @@
                         <div class="chart-title">
                             Elevation Gained Histogram
                         </div>
-                        <div class="chart-stage">
+                        <div class="chart-stage details-hist">
                             <div id="elevation_gained-histogram">
                                 <svg></svg>
                             </div>
@@ -304,7 +304,7 @@
                             Altitude Over Distance
                         </div>
 
-                        <div class="chart-stage">
+                        <div class="chart-stage details-line">
                             <div id="altitude-graph">
                                 <svg></svg>
                             </div>
@@ -324,7 +324,7 @@
                         <div class="chart-title">
                             Average Cadence Histogram
                         </div>
-                        <div class="chart-stage">
+                        <div class="chart-stage details-hist">
                             <div id="cadence-histogram">
                                 <svg></svg>
                             </div>
@@ -339,7 +339,7 @@
                             Cadence Over Distance
                         </div>
 
-                        <div class="chart-stage">
+                        <div class="chart-stage details-line">
                             <div id="cadence-graph">
                                 <svg></svg>
                             </div>
