--- a/athletes/templates/athletes/base.html
+++ b/athletes/templates/athletes/base.html
@@ -34,6 +34,8 @@
 	  	<!-- nav bar items starting from the left -->
 	    <ul class="nav navbar-nav">
 
+	    	<a href="/athletes" class="navbar-left"><img style="height:50px" src="{% static 'img/logo.png' %}"></a>
+
 			<li class="{% if nbar == 'home' %}active{% endif %}">
 			<a href="/athletes"><span class="glyphicon glyphicon-home"></span> Home </a>
 			</li>
