--- a/coaches/templates/coaches/base.html
+++ b/coaches/templates/coaches/base.html
@@ -27,6 +27,8 @@
 	<nav class="navbar navbar-default navbar-static-top navbar-inverse">
 	  <div class="container">
 
+	  <a href="/athletes" class="navbar-left"><img style="height:50px" src="{% static 'img/logo.png' %}"></a>
+
 	  <!-- nav bar selection modified from -->
 	  <!-- http://stackoverflow.com/questions/25044370/make-clicked-tab-active-in-bootstrap -->
 	  	<!-- nav bar items starting from the left -->
